--- a/xfce/rio.conf
+++ b/xfce/rio.conf
@@ -16,58 +16,58 @@ family = "JetBrainsMono Nerd Font"
 size = 20.0
 
 [cursor]
-shape = 'block'
+shape = "block"
 blinking = false
 
 [colors]
-background = '#000000'
-foreground  = '#FFFFFF'
-black = '#404040'
-red = '#D04040'
-green = '#40D040'
-yellow = '#D0D040'
-blue = '#4040D0'
-magenta = '#D040D0'
-cyan = '#40D0D0'
-white = '#D0D0D0'
+background = "#000000"
+foreground  = "#FFFFFF"
+black = "#404040"
+red = "#D04040"
+green = "#40D040"
+yellow = "#D0D040"
+blue = "#4040D0"
+magenta = "#D040D0"
+cyan = "#40D0D0"
+white = "#D0D0D0"
 
-cursor = '#FFFFFF'
-vi-cursor = '#FFFFFF'
+cursor = "#FFFFFF"
+vi-cursor = "#FFFFFF"
 
-tabs = '#12B5E5'
-tabs-foreground = '#7d7d7d'
-tabs-active = '#303030'
-tabs-active-highlight = '#ffa133'
-tabs-active-foreground = '#FFFFFF'
-bar = '#1b1a1a'
-split = '#292527'
+tabs = "#12B5E5"
+tabs-foreground = "#7d7d7d"
+tabs-active = "#303030"
+tabs-active-highlight = "#ffa133"
+tabs-active-foreground = "#FFFFFF"
+bar = "#1b1a1a"
+split = "#292527"
 
-search-match-background = '#44C9F0'
-search-match-foreground = '#FFFFFF'
-search-focused-match-background = '#E6A003'
-search-focused-match-foreground = '#FFFFFF'
+search-match-background = "#44C9F0"
+search-match-foreground = "#FFFFFF"
+search-focused-match-background = "#E6A003"
+search-focused-match-foreground = "#FFFFFF"
 
-hint-foreground = '#181818'
-hint-background = '#f4bf75'
+hint-foreground = "#181818"
+hint-background = "#f4bf75"
 
-selection-foreground = '#000000'
-selection-background = '#FFFFFF'
+selection-foreground = "#000000"
+selection-background = "#FFFFFF"
 
-dim-black = '#1C191A'
-dim-blue = '#0E91B7'
-dim-cyan = '#93D4E7'
-dim-foreground = '#ECDC8A'
-dim-green = '#098749'
-dim-magenta = '#624A87'
-dim-red = '#C7102A'
-dim-white = '#C1C1C1'
-dim-yellow = '#E6A003'
+dim-black = "#1C191A"
+dim-blue = "#0E91B7"
+dim-cyan = "#93D4E7"
+dim-foreground = "#ECDC8A"
+dim-green = "#098749"
+dim-magenta = "#624A87"
+dim-red = "#C7102A"
+dim-white = "#C1C1C1"
+dim-yellow = "#E6A003"
 
-light-black = '#7F7F7F'
-light-red = '#FF7F7F'
-light-green = '#7FFF7F'
-light-yellow = '#FFFF7F'
-light-blue = '#7F7FFF'
-light-magenta = '#FF7FFF'
-light-cyan = '#7FFFFF'
-light-white = '#FFFFFF'
+light-black = "#7F7F7F"
+light-red = "#FF7F7F"
+light-green = "#7FFF7F"
+light-yellow = "#FFFF7F"
+light-blue = "#7F7FFF"
+light-magenta = "#FF7FFF"
+light-cyan = "#7FFFFF"
+light-white = "#FFFFFF"
