converts time into seconds or minutes in the prompt

--- a/xfce/sway/config
+++ b/xfce/sway/config
@@ -12,9 +12,12 @@ input "*" {
 
 xwayland disable
 
+focus_follows_mouse yes
+
 for_window [app_id="imv"] floating enable
 for_window [app_id="mpv"] floating enable
 for_window [app_id="xfce4-appfinder"] floating enable
+for_window [title="Whisker Menu"] floating enable
 for_window [title="Panel Preferences"] floating enable
 for_window [title="Display"] floating enable
 for_window [title="Settings"] floating enable
