--- a/xfce/tmux.conf
+++ b/xfce/tmux.conf
@@ -16,6 +16,6 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'sh-copy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'sh-copy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'sh-copy'
